--- a/webclient/tests/wall/index.html
+++ b/webclient/tests/wall/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Wave Walls</title>
+		<script src="utils.js" type="text/javascript"></script>
 		<script src="rpc.js" type="text/javascript"></script>
 		<script src="common.pbjson.js" type="text/javascript"></script>
 		<script src="waveclient-rpc.pbjson.js" type="text/javascript"></script>
@@ -75,7 +76,7 @@ body { font-family:aria,sans-serif; }
 						<img src="https://mail.google.com/mail/images/blue_ghost.jpg" class="userimage" />
 					</div>
 					<div style="float:left; ">
-						<div style="margin-bottom:2px"><a href="#" style="color:#E3E3E3">Torben Weis</a></div>
+						<div style="margin-bottom:2px"><a href="#" style="color:#E3E3E3" id="username"></a></div>
 						<div style="background-color:#FFFFFF; padding:10px; margin:0px">
 							<textarea id="inputtext" style="font-family:arial,sans-serif; font-size:inherit; background-color:#FFFFFF; outline-style:none; outline-width:0; width:52em; border:none"></textarea>
 						</div>
@@ -150,6 +151,9 @@ body { font-family:aria,sans-serif; }
 	</div>
 	<script type="text/javascript">
 	
+/**
+ * Called when clicking on login
+ */
 function login()
 {
 	document.getElementById('logintext').innerHTML = "Logging in ... please wait";
@@ -157,10 +161,14 @@ function login()
 	JSOT.Rpc.login( document.getElementById('jid').value + "@wave1.vs.uni-due.de", onLogin );
 }
 
+/**
+ * Called when the server has logged us in
+ */
 function onLogin()
 {
 	document.getElementById( 'login' ).style.visibility = "hidden";
 	document.getElementById( 'app' ).style.visibility = "visible";
+	document.getElementById( 'username' ).innerHTML = JSOT.Rpc.jid;
 	
 	// Initialize the wave
 	var wave = JSOT.Wave.getWave( "w+wall", "wave1.vs.uni-due.de" );
@@ -172,6 +180,9 @@ function onLogin()
 	JSOT.Rpc.openWavelet( "wave://wave1.vs.uni-due.de/w+wall/conv+root" );
 }
 
+/**
+ * GUI
+ */
 function showWall()
 {
 	document.getElementById( 'newsfeed' ).style.visibility = "hidden";
@@ -179,6 +190,9 @@ function showWall()
 	document.getElementById( 'wall' ).style.visibility = "visible";
 }
 
+/**
+ * GUI
+ */
 function showNewsfeed()
 {
 	document.getElementById( 'wall' ).style.visibility = "hidden";
@@ -186,6 +200,9 @@ function showNewsfeed()
 	document.getElementById( 'newsfeed' ).style.visibility = "visible";
 }
 
+/**
+ * GUI
+ */
 function showFriends()
 {
 	document.getElementById( 'newsfeed' ).style.visibility = "hidden";
@@ -193,31 +210,9 @@ function showFriends()
 	document.getElementById( 'friends' ).style.visibility = "visible";
 }
 
-/*
-var maindoc = new JSOT.Doc();
-maindoc.content.push( new JSOT.Doc.ElementStart( "message", { id : "m+1" }, maindoc ) );
-maindoc.content.push( new JSOT.Doc.ElementEnd() );
-maindoc.postProcessing();
-
-var doc = new JSOT.Doc("m+1");
-doc.content.push( new JSOT.Doc.ElementStart( "message", { author : "Joe Doe", date : "9. March" }, doc ) );
-doc.content.push( new JSOT.Doc.ElementStart( "content" , null, doc ) );
-doc.content.push( "Here we can say what we always wanted to tell" );
-doc.content.push( new JSOT.Doc.ElementEnd() );
-doc.content.push( new JSOT.Doc.ElementStart( "like", { author : "Torben" }, doc ) );
-doc.content.push( new JSOT.Doc.ElementEnd() );
-doc.content.push( new JSOT.Doc.ElementStart( "comment", { author : "Heinz Wurst", date : "9. March" }, doc ) );
-doc.content.push( new JSOT.Doc.ElementStart( "content", null, doc ) );
-doc.content.push( "This is some comment that is supposed to be longer than a single line to show what happens if it becomes too long and the text breaks around." );
-doc.content.push( new JSOT.Doc.ElementEnd() );
-doc.content.push( new JSOT.Doc.ElementEnd() );
-doc.content.push( new JSOT.Doc.ElementEnd() );
-doc.postProcessing();
-
-var docs = { };
-docs[ "m+1" ] = doc;
-*/
-
+/**
+ * GUI: Creates the DOM for a new message
+ */
 function newMessage(doc)
 {
 	var dom = document.createElement( "div" );
@@ -234,43 +229,21 @@ function newMessage(doc)
 				'<b class="frame4"><b class="frame4b"></b></b><b class="frame5"><b class="frame5b"></b></b><b class="frame6"><b class="frame6b"></b></b>';
 	dom.innerHTML = html;
 	
+	// Connect button with event handler
 	var like = getElementByClass( dom, "controllike" );
 	like.href = 'javascript:like("' + doc.docId + '")';
 
+	// Connect button with event handler
 	var comment = getElementByClass( dom, "controlcomment" );
 	comment.href = 'javascript:createCommentBox("' + doc.docId + '")';
 
 	return dom;
 }
 
-function getElementByClass( root, className )
-{
-	for( var i = 0; i < root.childNodes.length; ++i )
-	{
-		var child = root.childNodes[i];
-		if ( child.className == className )
-			return child;
-		var result = getElementByClass( child, className );
-		if ( result )
-			return result;
-	}
-	return null;
-}
-
-function getElementsByClass( root, className, result )
-{
-	if ( !result )
-		result = [];
-	for( var i = 0; i < root.childNodes.length; ++i )
-	{
-		var child = root.childNodes[i];
-		if ( child.className == className )
-			result.push( child );
-		getElementsByClass( child, className, result );
-	}
-	return result;
-}
-
+/**
+ * Called when the message element in the wavelet document has a new child,
+ * i.e. someone commented on the message, liked it, ...
+ */
 function messageNewChild( selfIndex, childIndex )
 {
 	var self = this.content[selfIndex];
@@ -375,6 +348,9 @@ function messageNewChild( selfIndex, childIndex )
 	}
 }
 
+/**
+ * Called when the wavelet document containing the message tag has a new child.
+ */
 function messageDocNewChild(selfIndex, childIndex)
 {  
 	var child = this.content[childIndex];
@@ -397,46 +373,9 @@ function messageDocNewChild(selfIndex, childIndex)
 	return null;
 };
 
-JSOT.Doc.prototype.createGUI = function()
-{
-	var result = []
-	var current = this;
-	var currentIndex = -1;
-	var stack = [];
-	for( var i = 0; i < this.content.length; ++i )
-	{
-		var item = this.content[i];
-		if ( typeof(item) == "string" )
-		{
-		}
-		else if ( item.element_start )
-		{
-			if ( !item.processed && current.newChild )
-			{
-				if ( currentIndex == -1 )
-					result.push( current.newChild.apply( this, [currentIndex, i] ) ); 
-				else
-				
-					current.newChild.apply( this, [currentIndex, i] )
-				item.processed = true;
-			}
-			stack.push( currentIndex );
-			current = item;
-			currentIndex = i;
-		}
-		else if ( item.element_end )
-		{
-			currentIndex = stack.pop();
-			if ( currentIndex == -1 )
-				current = this;
-			else
-				current = this.content[ currentIndex ];
-		}
-	}
-		
-	return result;
-};
-
+/**
+ * Called when the wavelet document containing the list of messages has a new child.
+ */
 function conversationNewChild(selfIndex, childIndex)
 {
 	var wave = JSOT.Wave.getWave( "w+wall", "wave1.vs.uni-due.de" );
@@ -460,8 +399,10 @@ function conversationNewChild(selfIndex, childIndex)
 	return null;
 };
 
-//maindoc.process();
-
+/**
+ * Called when the user clicks on the publish button.
+ * It submits a delta to the wave server.
+ */
 function publish()
 {
 	var wave = JSOT.Wave.getWave( "w+wall", "wave1.vs.uni-due.de" );
@@ -497,6 +438,12 @@ function publish()
 	document.getElementById("inputtext").value = "";
 }
 
+/**
+ * Called when the user clicks on the 'like' button.
+ * It submits a delta to the wave server.
+ *
+ * @param m is the name of the wavelet document which contains the message.
+ */
 function like(m)
 {
 	var wave = JSOT.Wave.getWave( "w+wall", "wave1.vs.uni-due.de" );
@@ -515,15 +462,29 @@ function like(m)
 	docop.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount( 1 ) );
 	mutations.push(m2);
 
+	// Apply locally and send to the server
 	wavelet.submitMutations( mutations );
 }
 
+/**
+ * Called when the user clicks on the publish button for a comment.
+ * It submits a delta to the wave server.
+ *
+ * @param m is the name of the wavelet document which contains the message.
+ */
 function publishComment(m)
 {
-	var doc = docs[m];
-	var textarea = getElementByClass( doc.content[0].dom, "commenttextarea" );
-	
-	var docop = new protocol.ProtocolDocumentOperation();
+	var wave = JSOT.Wave.getWave( "w+wall", "wave1.vs.uni-due.de" );
+	var wavelet = wave.getWavelet( "conv+root", "wave1.vs.uni-due.de" );
+	var doc = wavelet.getDoc(m);
+	var dom = doc.content[0].dom;
+	var textarea = getElementByClass( dom, "commenttextarea" );
+	var mutations = [];
+
+	var m2 = new protocol.ProtocolWaveletOperation_MutateDocument();
+	m2.document_id = m;
+	m2.document_operation = new protocol.ProtocolDocumentOperation();
+	var docop = m2.document_operation;
 	docop.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount( doc.itemCount() - 1 ) );
 	docop.component.push( protocol.ProtocolDocumentOperation.newElementStart( "comment", [ protocol.ProtocolDocumentOperation.newKeyValuePair( "author", JSOT.Rpc.jid ) , protocol.ProtocolDocumentOperation.newKeyValuePair( "date", "10. March" ) ] ) );
 	docop.component.push( protocol.ProtocolDocumentOperation.newElementStart( "content" ) );
@@ -531,16 +492,22 @@ function publishComment(m)
 	docop.component.push( protocol.ProtocolDocumentOperation.newElementEnd() );
 	docop.component.push( protocol.ProtocolDocumentOperation.newElementEnd() );
 	docop.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount( 1 ) );
-	docop.applyTo( doc );
+	mutations.push(m2);
+
+	// Apply locally and send to the server
+	wavelet.submitMutations( mutations );
 
 	deleteCommentBox(m);
-	
-	doc.process();
 }
 
+/**
+ * GUI
+ */
 function createCommentBox(m)
 {
-	var doc = docs[m];
+	var wave = JSOT.Wave.getWave( "w+wall", "wave1.vs.uni-due.de" );
+	var wavelet = wave.getWavelet( "conv+root", "wave1.vs.uni-due.de" );
+	var doc = wavelet.getDoc(m);
 	var dom = doc.content[0].dom;
 	if ( getElementByClass( dom, "commentbox" ) )
 		return;
@@ -562,18 +529,25 @@ function createCommentBox(m)
 				'</div>';
 	div.innerHTML = html;
 	
+	// Connect button with event handler
 	var delcomment = getElementByClass( div, "controldelcomment" );
 	delcomment.onclick = function() { deleteCommentBox( doc.docId ) };
 
+	// Connect button with event handler
 	var pubcomment = getElementByClass( div, "controlpubcomment" );
 	pubcomment.onclick = function() { publishComment( doc.docId ) };
 
 	before.parentNode.insertBefore( div, before.nextSibling );
 }
 
+/**
+ * GUI
+ */
 function deleteCommentBox(m)
 {
-	var doc = docs[m];
+	var wave = JSOT.Wave.getWave( "w+wall", "wave1.vs.uni-due.de" );
+	var wavelet = wave.getWavelet( "conv+root", "wave1.vs.uni-due.de" );
+	var doc = wavelet.getDoc(m);
 	var dom = doc.content[0].dom;
 	var comment = getElementByClass( dom, "commentbox" );
 	if ( comment )
